Performance changes done with w.r.t Migration Tool
SVN-Revision: 22851